--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "razorpay": "^2.0.7"
+    "razorpay": "^2.0.7",
+    "shortid": "^2.2.16"
   }
 }
